<resources>
    <string name="app_name">Kewis</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="wishlist">Wishlist</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="email_hint_name">Username </string>
    <string name="password_hint_name">Password</string>
    <string name="login_button_name">LogIn</string>
    <string name="textView_title">LogIn</string>
    <string name="email_hint">Email</string>
    <string name="email_hint_repeat">Rewrite Email</string>
    <string name="name_prompt">Name</string>
    <string name="date">Date of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="textView_title_signup">Sign Up</string>
    <string name="register_text_prompt">Not yet Registered? Signup Now</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="forget">Forget Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab">fab</string>
    <string name="admin_portal">Admin Portal</string>
    <string name="category">Category</string>
    <string name="feed">Feed</string>
    <string name="product">Product</string>
    <string name="user">User</string>
    <string name="orders">Orders</string>
    <string name="help">HELP</string>
    <string name="get_started_text">Select any option to get started</string>
    <string name="continue_as_guest"><![CDATA[Continue as Guest -->]]></string>
    <string name="let_s_get_started">Let`s Get Started</string>
    <string name="first_name">First_Name</string>
    <string name="last_name">Last_Name</string>
    <string name="repeat_password">Repeat_Password</string>
    <string name="enter_memorable_word">Enter Memorable Word</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="category_name">{category_name}</string>
    <string name="name">{ Name }</string>
    <string name="price">{ price }</string>
    <string name="title">{title}</string>
    <string name="add_category">Add Category</string>
    <string name="category_name1">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="paste_category_image_url">paste category image url</string>
    <string name="add_post_title">Add Post Title</string>
    <string name="title_name">Title Name</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_users">Add Users</string>
    <string name="first_name1">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="memorable_name">Memorable Name</string>
    <string name="email">Email</string>
    <string name="add_address">Add Address</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="add_password">Add password</string>
    <string name="user_type">User Type:</string>
    <string name="user1">User</string>
    <string name="admin">Admin</string>
    <string name="upload_image1">Upload Image</string>
    <string name="edit_users">Edit Users</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="memorable_name1">Memorable Name</string>
    <string name="email1">Email</string>
    <string name="add_phone_number1">Add Phone Number</string>
    <string name="add_password1">Add password</string>
    <string name="add_hobbies">Add Hobbies</string>
    <string name="navigate">Navigate</string>
    <string name="admin_portal1">Admin Portal</string>
    <string name="app_settings">App settings</string>
    <string name="past_orders">Past Orders</string>
    <string name="about_us">About us</string>
    <string name="help1">Help</string>
    <string name="logout">Logout</string>
    <string name="forget_password">Forget Password</string>
    <string name="memorable_words">Memorable_words</string>
    <string name="show_password">Show Password</string>
    <string name="orders1">Orders</string>
    <string name="carts">Carts</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="category_name2">Category Name</string>
    <string name="actions">Actions</string>
    <string name="nav_bar">nav bar</string>
    <string name="logo_brand">Logo brand</string>
    <string name="cart_with_badges">Cart with badges</string>
    <string name="search">Search</string>
    <string name="title1">Title</string>
    <string name="no_of_products">No. of Products</string>
    <string name="actions1">Actions</string>
    <string name="product_name3">Product Name</string>
    <string name="actions3">Actions</string>
    <string name="usernames">Usernames</string>
    <string name="user_type2">User Type</string>
    <string name="actions4">Actions</string>
    <string name="profile">Profile</string>
    <string name="first_name3">{First Name}</string>
    <string name="last_name3">{last Name}</string>
    <string name="usernames1">{usernames}</string>
    <string name="email2">{email}</string>
    <string name="address3">Address:</string>
    <string name="addres">{Address}</string>
    <string name="phone1">Phone:</string>
    <string name="phone_number2">{phone number}</string>
    <string name="hobbies">Hobbies:</string>
    <string name="hobbies1">{Hobbies}</string>
    <string name="last_login">last Login:</string>
    <string name="last_status">{last status}</string>
    <string name="words">words:</string>
    <string name="memorable_words1">{memorable words}</string>
    <string name="logging_in">Logging in...</string>
    <string name="titles">{Titles}</string>
    <string name="no_of_products1">{no. of Products}</string>
    <string name="product_name4">{product_name}</string>
    <string name="first_name6">{first_name}</string>
    <string name="user_type1">{user_type}</string>
    <string name="add_address1">Add Address</string>
    <string name="add_to_whishlist">Add to Whishlist</string>
    <string name="your_favorite_list_is_empty">Your Favorite List is empty</string>
    <string name="wishlist1">Wishlist</string>

</resources>