<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<item tools:ignore="MenuTitle" />
    <group
        android:id="@+id/nav_drawer2"
        android:checkableBehavior="single"
        android:menuCategory="container"
        android:orderInCategory="0"
        android:title="@string/navigate">
     <item
      android:id="@+id/admin_login"
      android:icon="@drawable/portal"
      android:title="@string/admin_portal1"
         android:visible="false"/>


     <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/app_settings"/>
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/orders"
        android:title="@string/past_orders"/>
    <item
        android:id="@+id/navigation_aboutUs"
        android:icon="@drawable/about"
        android:title="@string/about_us"/>
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/help"
        android:title="@string/help1"/>
     <item
         android:id="@+id/navigation_logout"
         android:icon="@drawable/logout"
         android:title="@string/logout"
         android:visible="false"/>
    </group>

</menu>