<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profiles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@drawable/bg_profile">

<LinearLayout
    android:id="@+id/topBar_profile"
    android:layout_width="match_parent"
    android:layout_height="150dp"
       android:orientation="vertical"
    android:background="#B6EAEA">

       <LinearLayout
           android:id="@+id/admin_action_bar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="15dp">

              <ImageView
                  android:id="@+id/back_button_user_page"
                  android:layout_width="0dp"
                  android:layout_height="30dp"
                  android:layout_marginBottom="10dp"
                  android:layout_weight="1"
                  android:background="?attr/selectableItemBackground"
                  android:clickable="true"
                  android:contentDescription="@string/fab"
                  android:focusable="true"
                  android:src="@drawable/baseline_arrow_back_24"
                  tools:ignore="TouchTargetSizeCheck" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/profile"
                  android:textSize="19sp"
                  android:gravity="center"
                  android:layout_weight="2"
                  android:textStyle="bold"
                  android:fontFamily="@font/spotlight_typewriting"
                  />

              <ImageView
                  android:id="@+id/edit_user_profile"
                  android:layout_width="0dp"
                  android:layout_height="30dp"
                  android:src="@drawable/user_edit"
                  android:layout_weight="1"
                  android:background="?attr/selectableItemBackground"/>

       </LinearLayout>

       <ImageView
           android:layout_width="80dp"
           android:layout_height="40dp"
           android:src="@drawable/cooltext434319163041389"
           android:layout_gravity="end"
           android:layout_marginHorizontal="15dp"/>
</LinearLayout>
       <com.google.android.material.imageview.ShapeableImageView
              android:id="@+id/profile_image"
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="100dp"
           android:background="@color/red"
           app:shapeAppearanceOverlay="@style/circleImageView"
           app:strokeWidth="10dp" />
          <LinearLayout
           android:id="@+id/profile_fName_lName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
              android:layout_below="@id/profile_image"
              android:orientation="horizontal"
              android:layout_centerHorizontal="true">
         <TextView
             android:id="@+id/profile_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="5dp"
             android:layout_marginVertical="10dp"
                android:text="@string/first_name3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/spotlight_typewriting"
                />
              <TextView
                  android:id="@+id/profile_last_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/profile_image"
                  android:layout_centerHorizontal="true"
                  android:layout_marginHorizontal="5dp"
                  android:layout_marginVertical="10dp"
                  android:text="@string/last_name3"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:fontFamily="@font/spotlight_typewriting"
                  />

       </LinearLayout>
       <LinearLayout
           android:id="@+id/profile_usernames_email"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_below="@id/profile_fName_lName"
           android:layout_centerHorizontal="true">

              <TextView
                  android:id="@+id/profile_usernames"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/usernames1"
                  android:textSize="14sp"
                  android:textAlignment="center"/>

              <TextView
                  android:id="@+id/profile_email"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/email2"
                  android:textSize="14sp" />

       </LinearLayout>
       <View
           android:id="@+id/divider"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_margin="25dp"
           android:background="@color/black"
           android:layout_below="@id/profile_usernames_email"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/divider"
           android:orientation="vertical"
           android:layout_marginTop="10dp">
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="45dp"
                     android:orientation="horizontal"
                  android:layout_marginHorizontal="10dp">
                     <TextView
                         android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:text="@string/address3"
                         android:layout_marginHorizontal="20dp"/>

                     <TextView
                         android:id="@+id/profile_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="@string/addres" />
              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="45dp"
                  android:orientation="horizontal"
                  android:layout_marginHorizontal="10dp">
                     <TextView
                         android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:text="@string/phone1"
                         android:layout_marginHorizontal="20dp"/>

                     <TextView
                         android:id="@+id/profile_phoneNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="@string/phone_number2" />
              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="45dp"
                  android:orientation="horizontal"
                  android:layout_marginHorizontal="10dp">
                     <TextView
                         android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:text="@string/hobbies"
                         android:layout_marginHorizontal="20dp"/>

                     <TextView
                         android:id="@+id/profile_hobbies"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="@string/hobbies1" />
              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="45dp"
                  android:orientation="horizontal"
                  android:layout_marginHorizontal="10dp">
                     <TextView
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:text="@string/last_login"
                         android:layout_marginHorizontal="20dp"/>

                     <TextView
                         android:id="@+id/profile_last_login"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="@string/last_status" />
              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="45dp"
                  android:orientation="horizontal"
                  android:layout_marginHorizontal="10dp">
                     <TextView
                         android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:text="@string/words"
                         android:layout_marginHorizontal="20dp"/>

                     <TextView
                         android:id="@+id/profile_memorableWords"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="@string/memorable_words1" />
              </LinearLayout>

       </LinearLayout>
</RelativeLayout>