<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/dialog_add_users"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/dialog_add_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_users"
            android:fontFamily="@font/spotlight_typewriting"
            android:textAlignment="center"
            android:letterSpacing="0.1"
            android:textColor="@color/red"
            android:textSize="26sp"
            android:textStyle="bold" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/text_add_userFirstName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:autofillHints="Product Name"
        android:drawableStart="@drawable/outline_filter_list_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/special_elite"
        android:hint="@string/first_name1"
        android:inputType="text"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/text_add_userLastName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:autofillHints="Product Name"
        android:drawableStart="@drawable/outline_filter_list_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/special_elite"
        android:hint="@string/last_name1"
        android:inputType="text"
        android:textColor="@color/black" />

</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_add_userMemorableName"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:autofillHints="Product Price"
                android:drawableStart="@drawable/ic_baseline_drive_file_rename_outline_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/memorable_name"
                android:inputType="text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/text_add_userEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:autofillHints="Quantity"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="@color/black" />


        </LinearLayout>


        <EditText
            android:id="@+id/text_add_userAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Product Image URL"
            android:drawableStart="@drawable/baseline_edit_location_alt_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/special_elite"
            android:hint="@string/add_address"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/text_add_userPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Product Image URL"
            android:drawableStart="@drawable/ic_baseline_contact_phone_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/special_elite"
            android:hint="@string/add_phone_number"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/text_add_userPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Product Image URL"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/special_elite"
            android:hint="@string/add_password"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/text_add_userUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_type"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:fontFamily="@font/courier_prime_code"/>
        <RadioGroup
            android:id="@+id/radioGroup_userType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="45dp">

            <RadioButton
                android:id="@+id/radioButtonUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButtonAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<ImageView
    android:id="@+id/imageView_add_userProfile"
    android:layout_marginTop="5dp"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/custom_edit"
    />
        <Button
            android:id="@+id/button_add_userProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/upload_image1"
            android:drawableLeft="@drawable/baseline_cloud_upload_24"
            />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

