<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".sign_up.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25pt"
        android:layout_marginHorizontal="8pt"
        app:cardCornerRadius="35dp"
        android:background="@color/white"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/dashboardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/let_s_get_started"
                android:fontFamily="@font/spotlight_typewriting"
                android:textAlignment="center"
                android:letterSpacing="0.1"
                android:textColor="@color/red"
                android:textSize="26sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="35dp">
            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/black"
                android:layout_weight="2"/>
                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:autofillHints="lastName"
                    android:fontFamily="@font/special_elite"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:layout_weight="2"/>
            </LinearLayout>
            <EditText
                android:id="@+id/txtEmail_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:autofillHints="emailAddress"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/txtPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/password_hint_name"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/txtRepeat_PasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/txtMemorable_Word"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="Memorable Word"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/enter_memorable_word"
                android:inputType="textCapCharacters"
                android:padding="15dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnSignupClick"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/teal_700"
                android:fontFamily="@font/special_elite"
                android:text="@string/textView_title_signup"
                android:textColor="#000000"
                android:textSize="18sp"
                app:cornerRadius="200dp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textView_already_account_from_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:clickable="true"
        android:fontFamily="@font/spotlight_typewriting"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardView_register"
    />

</androidx.constraintlayout.widget.ConstraintLayout>